@@ -17,10 +17,10 @@ is(
         event Ok => sub {
             call pass => T();
         };
-        event Warning => sub {
+        event Ok => sub {
             call causes_fail      => T();
             call increments_count => T();
-            call warning          => match qr/^Unexpected warning: Oh noes!/;
+            call name             => match qr/^Unexpected warning: Oh noes!/;
         };
         event Ok => sub {
             call pass => T();
